[package]
name = "tokio-stomp-2"
version = "0.1.0"
description = "Unofficial successor to Asynchronous streaming STOMP client"
authors = ["Alexander Kunde <alexander.kunde@hamburgsud.com>, Jens Walter <jens.walter@apimeister.com>"]
original-authors = ["Alex Whitney <adwhit@fastmail.com>"]
repository = "http://github.com/schoki040/tokio-stomp-2"
homepage = "http://github.com/schoki040/tokio-stomp-2"
keywords = ["stomp", "tokio", "streaming"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "1"
custom_debug_derive = "0.4.0"
failure = "0.1.8"
futures = "0.3"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.6", features = ["codec"] }
nom = "4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
